Tue Mar 16 09:36:42 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Any_Unknown_IDL_Type.cpp (_tao_decode):

	  Update the byte order from the incoming CDR stream.

	* tao/CORBA_String.cpp:

	  Applied patches from Oliver Kellog and Paolo Carlini
	  <pcarlini@suse.de> which helps TAO to get compiling with
	  g++ 3.4 (prerelease). Paolo mentions that this should make things
	  more portable. It compiles fine with g++ atleast. We need to see how
	  things go on other platforms.

Tue Mar 16 09:40:54 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_decl.cpp:
        * TAO_IDL be/be_interface.cpp:
        * TAO_IDL be/be_visitor_interface/amh_rh_sh.cpp:
        * TAO_IDL be/be_visitor_interface/amh_rh_ss.cpp:
        * TAO_IDL be/be_visitor_interface/direct_proxy_impl_sh.cpp:
        * TAO_IDL be/be_visitor_interface/interface_ch.cpp:
        * TAO_IDL be/be_visitor_interface/thru_poa_proxy_impl_sh.cpp:
        * TAO_IDL be/be_visitor_valuetype/valuetype_cs.cpp:
        * TAO_IDL be/be_visitor_valuetype/valuetype_init_cs.cpp:
        * TAO_IDL be_include/be_decl.h:
        * TAO_IDL be_include/be_interface.h:

          - Added code generation that redeclares operations that a local
            interface has inherited from a non-local one as pure virtual.
            Thanks to Gautam Thaker <gthaker@atl.lmco.com> for reporting
            the problem.

          - Added '::' prefix to the generation of some fully scoped
            names in code generation for AMH-related classes, helping
            some compilers that get confused when a namespace name is
            repeated at some more deeply nested level.

          - Fixed indentation in code generation of collocation classes
            in the skeleton header file.

        * tests/IDL_Test/IDL_Test.mpc:

          Added source files (and thus indirectly the IDL files that
          generate them) to the project file. Also removed the source file